--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to my Website!</title>
+    <link rel="stylesheet" href="styles/main.css"
 </head>
 <body>
-    
+    <h1 class="under-construction">This Website is Under Construction, <br>So the content is not available!</h1>
 </body>
 </html>
