--- a/index.html
+++ b/index.html
@@ -5,9 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to my Website!</title>
-    <link rel="stylesheet" href="styles/main.css"
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main-responsive.css">
+    <link rel="stylesheet" href="styles/counter.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/header-responsive.css">
+    
+    <style>
+        .header {
+            background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url('images/coding-g0c9d30605_1920.jpg');
+            background-repeat: no-repeat;
+            background-position: center;
+         }
+    </style>
+
+    <script type="text/javascript" src="scripts/main.js"></script>
+
 </head>
 <body>
-    <h1 class="under-construction">This Website is Under Construction, <br>So the content is not available!</h1>
+   
+    <div class="header">
+        <!--Typing effect-->
+
+        <div class="intro-container">
+            <h2 id="greeting-text" class="greeting-text">Hey there,</h2>
+            <p id="about-me-welcome" class="about-me-welcome"></p>
+        </div>
+    </div>
+
+<div class="sections-container">
+
+<div class="section-1">
+    <h2 class="section-heading">Statics</h2>
+
+    <hr class="section-divider">
+    <h2 class="section-text">PAGE VISITORS</h2>
+    <!--Visitors-->
+    <img src="https://profile-counter.glitch.me/nethmina-test/count.svg" class="counter-img">
+
+    <hr class="section-divider">
+    <h2 class="section-text">Languages/Frameworks Used</h2>
+
+<div class="langs-container">
+    <img src="images/electron.png" class="lang">
+    <img src="images/javascript.png" class="lang">
+    <img src="images/nodejs.png" class="lang">
+    <img src="images/reactnative.png" class="lang">
+</div>
+
+</div>
+
+<div class="section-2">
+    <h2 class="section-heading">My Projects</h2>
+</div>
+
+</div>
+<!--Software is like sex: it's better when it's free-->
+
 </body>
 </html>
